13146
The following works as expected:
{code}
scala> trait A
defined trait A

scala> trait B
defined trait B

scala> trait C
defined trait C

scala> val x : A with B with C = new A with B with C { }
x: A with B with C = $$anon$$1@e099cb

scala> val x : A with (B with C) = new A with B with C { }
x: A with B with C = $$anon$$1@74a6b4

scala> val x : (A with B) with C = new A with B with C { }
x: A with B with C = $$anon$$1@1a600a8
{code}

But the following are disallowed:
{code}
scala> val x : A with B with C = new (A with B) with C { }
<console>:7: error: class type required
       val x : A with B with C = new (A with B) with C { }
                                      ^

scala> val x : A with B with C = new A with (B with C) { }
<console>:7: error: class type required
       val x : A with B with C = new A with (B with C) { }
                                             ^
{code}


